--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"LineEdit",
+"class": &"CostLineEdit",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Nodes/cost_line_edit.gd"
+}, {
 "base": &"Node",
 "class": &"Ingredient",
 "icon": "",
