--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
@@ -17,27 +17,27 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Objects/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Objects/", "res://Menus/")
+dock_filesystem_selected_paths=PackedStringArray("res://Globals/ingredient_store.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Objects/", "res://Menus/", "res://Globals/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://program.tscn", "res://Objects/ingredient.tscn", "res://Menus/add_ingredient_menu.tscn", "res://Menus/add_recipe_menu.tscn", "res://Objects/Recipe.tscn")
-current_scene="res://Objects/Recipe.tscn"
+open_scenes=PackedStringArray("res://program.tscn", "res://Objects/ingredient.tscn", "res://Objects/Recipe.tscn", "res://Menus/main_menu.tscn", "res://Menus/ingredients_menu.tscn", "res://Nodes/cost_line_edit.tscn")
+current_scene="res://Menus/ingredients_menu.tscn"
 center_split_offset=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Menus/add_ingredient_menu.gd", "res://Menus/add_recipe_menu.gd", "res://Objects/ingredient.gd", "res://Objects/ingredient_for_recipe.gd", "res://Menus/main_menu.gd", "res://program.gd", "res://Objects/recipe.gd"]
-selected_script="res://Menus/add_recipe_menu.gd"
-open_help=["MenuButton", "PopupMenu", "String"]
-script_split_offset=70
+open_scripts=["res://Globals/helpers.gd", "res://Objects/ingredient.gd", "res://Menus/ingredients_menu.gd", "res://Objects/ingredient_for_recipe.gd", "res://Globals/ingredient_store.gd", "res://Menus/main_menu.gd", "res://program.gd"]
+selected_script="res://Menus/ingredients_menu.gd"
+open_help=[]
+script_split_offset=183
 list_split_offset=0
 zoom_factor=1.0
 
